tests/fixtures/bad/missing_header.maze
theme:      nature
size:       4x4
start:      1,1
time_start: 08:00

tiles:
....
....
....
....
